fix: delete credentials

--- a/.env
+++ b/.env
@@ -1,7 +1,4 @@
-EMAILJS_SERVICE_ID=service_grifrpr
-EMAILJS_TEMPLATE_ID=template_mgv32zf
-EMAILJS_PUBLIC_KEY=LIoNdpkleSrpHcfy4
-RECEIVER_EMAIL=enwu2014@hotmail.com
-RECEIVER_NAME=Enzo Wu
-SENDER_EMAIL=enwu2010@hotmail.com
-SENDER_PASSWORD=Tijela2019
+RECEIVER_EMAIL=
+RECEIVER_NAME=
+SENDER_EMAIL=
+SENDER_PASSWORD=
